--- a/Seção04/css/style.css
+++ b/Seção04/css/style.css
@@ -1,3 +1,23 @@
+h1 {
+  color: #91f27f;
+  border: 2px solid red;
+}
 
+p {
+  color: #91f27f;
+  border: 2px solid red;
+  padding: 16px;
+}
+
+a {
+  color: #91f27f;
+  border: 2px solid red;
+}
+
+div p {
+  background-color: blue;
+  color: white;
+  border: 3px dotted green;
+}
 
 /*# sourceMappingURL=style.css.map */
